# adversarial-search

./: .buildinfo  Dockerfile  README.md  api.html  game.py  genindex.html  index.html  node.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  search.py  searchindex.js  setup.html  setup.py
.doctrees/: api.doctree  environment.pickle  index.doctree  setup.doctree
.github/workflows/: pycoverage.yml  pydoc.yml  pylint.yml  pytest.yml
_sources/: api.rst.txt  index.rst.txt  setup.rst.txt
algorithms/: alphabeta.py  minimax.py  random_choice.py  search.py
docs/source/: api.rst  conf.py  index.rst
src/: game.py  search.py
src/algorithms/: alphabeta.py  minimax.py  random_choice.py  search.py
tests/: _tree_example.py  test_alphabeta.py  test_minimax.py  test_node.py  test_random_choice.py
utils/: node.py  search.py
