[tool.poetry]
name = "advsearch"
version = "0.1.0"
description = "Adversarial search algorithms"
authors = ["mgross <mark@grossremarks.com>"]
license = "MIT"
packages = [
    { include = "utils" },
    { include  = "algorithms" },
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.2"
pylint = "^2.12.2"
setuptools = "^59.5.0"
sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
